Added remark explaining the connection to Babai's algorithm and lattice enumeration.

--- a/extraref.bib
+++ b/extraref.bib
@@ -110,3 +110,19 @@
   journal   = "{computatinal complexity}",
   pages     = "365--411",
 }
+
+@article{DBLP:journals/combinatorica/Babai86,
+  author       = {L{\'{a}}szl{\'{o}} Babai},
+  title        = {On Lov{\'{a}}sz' lattice reduction and the nearest lattice point
+                  problem},
+  journal      = {Comb.},
+  volume       = {6},
+  number       = {1},
+  pages        = {1--13},
+  year         = {1986},
+  url          = {https://doi.org/10.1007/BF02579403},
+  doi          = {10.1007/BF02579403},
+  timestamp    = {Wed, 22 Jul 2020 22:02:57 +0200},
+  biburl       = {https://dblp.org/rec/journals/combinatorica/Babai86.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
