--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -220,7 +220,7 @@ and by
 \[
  \decompmod{q}\colon\,\ring_q \to \ring^\limbs,\quad \decompmod{q}(a) \coloneqq \decompring(a'),\enspace,
 \]
-where $a'$ is the representative of $a$ in $\ring$ with coefficients in $\{-\eta,\ldots,+\eta\}$.
+where $a'$ is the representative of $a$ in $\ring$ with coefficients in $\{-\frac{q-1}{2},\ldots,+\frac{q-1}{2}\}$.
 \end{definition}
 We remark that the only difference between $\projmod{q}$ and $\projring$ resp.\ between $\decompmod{q}$ and $\decompring$ is whether the non-decomposed element is in $\ring_q$ or $\ring$.
 The decomposed elements are always from $\ring^\limbs$.
