Fix typo found by Mark and Nils

--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -208,7 +208,7 @@ Let us now prove each individual claim in order.
 \bigskip\noindent
 For \autoref{item:basis}, note that $\projring(\decompring(\vec{x})) = \vec{x}$ for all $\vec{x}\in\ring$. This implies that
 \[
- \projring(\delta_q) = \projring(\vec{v}) - \projring(\decompring(\projring(\vec{v}))) = \projring(\vec{v}) - \projring(\vec{v}) = 0\enspace.
+ \projring(\delta_v) = \projring(\vec{v}) - \projring(\decompring(\projring(\vec{v}))) = \projring(\vec{v}) - \projring(\vec{v}) = 0\enspace.
 \]
 So $\delta_q\in\latring$ and, by \autoref{prop:kernellattices}, coefficients $\alpha_i$ exist and are unique.
 They can clearly be found by solving a system of linear equations (over $\ring$).
