--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -307,7 +307,7 @@ where $\tilde{t} = \binsca(t)$ is the binary decomposition of $t$. We define $\m
 Since $\modlinear{t}$ is defined via $\ring$-linear constraints, $\modlinear{t}$ is an $\ring$-submodule of $\modopening$.
 \end{definition}
 By construction, any opening that passes either individual, weak or strong verification must be linearly verifying.
-Whether a given opening is linearly verifying or not can be checked in polynomial time, given only public data $\params$ and $t$.
+Whether a given opening $\vec{d}$ is linearly verifying or not can be checked in polynomial time, given only $\vec{d}$ and public data $\params$ and $t$.
 
 We now define an efficient encoding scheme for linearly verifying openings in \autoref{fig:EncodingOpenings}.
 % \begin{definition}\label{def:latencode}
